Implement Product service tests Create Node.js script to generate dummy data for products and order-product links